# Fillit

./: .Makefile.swp  .main.c.swp  .solve.c.swp  CMakeLists.txt  Makefile  README.md  a.out  author  fill_figure.c  fillit  fillit.c  fillit.h  ft_root.c  get_next_line.c  get_next_line.h  input_check.c  input_test1  list_funcs.c  main.c  print_errors.c  solve.c  take_tetrimino.c  test_input  tetrimino_collection.c
includes/: .solve.h.swp  fillit.h  get_next_line.h  header.h  solve.h  take_tetrimino.h
libft/: Makefile
libft/includes/: libft.h
libft/srcs/: ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_power.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_base.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_realloc.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  (+26 more)
libft/vector/: vector_pop_back.c
src/: .solve.c.swp  checkers.c  fill_figure.c  free_memory.c  get_next_line.c  input_test1  main.c  solve.c  take_tetrimino.c  valid_checker.c
tests/: input_test2  input_test3  input_test4  input_test5  input_test6  input_test7  input_test8
